--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
+# Dependencias
 node_modules
+.npm
+
+# Builds y cache de Next.js
 .next
 out
+
+# Variables de entorno (nunca subir)
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Vercel
 .vercel
+
+# Logs y temporales
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .DS_Store
-npm-debug.log
-yarn-debug.log
-yarn-error.log
